MDEV-7967: segfault after (re-)moving audit log file, fix on plugin level